# Capstone

./: .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml  npm-publish.yml
android/: gradlew  gradlew.bat  settings.gradle.kts
android/app/: build.gradle.kts
backend/: Dockerfile  pytest.ini  requirements.txt
backend/server/: auth.py  config.py  main.py
backend/server/algorithms/: __init__.py  base.py  fedavg.py  registry.py
backend/server/api/: benchmark_api.py  rest.py  ws.py
backend/server/benchmark/: __init__.py  runner.py  store.py
backend/server/core/: client_manager.py  evaluator.py  orchestrator.py  weights.py
backend/tests/: conftest.py  test_auth.py  test_registry.py  test_round_lifecycle.py
cli/: README.md  package.json
cli/src/: api.js  commands.js  device.js  index.js  repl.js  ui.js
client/: README.md  api.py  collectors.py  config.py  credentials.py  device_info.py  main.py  pyproject.toml  reporter.py  requirements.txt
client/algorithms/: __init__.py  base.py  fedavg.py  registry.py
client/datasets/: __init__.py  base.py  fashion_mnist.py  mnist.py  registry.py
client/models/: __init__.py  base.py  cnn_mnist.py  registry.py
client/systemd/: fl-client.service
docs/: API.md  ARCHITECTURE.md  DEPLOY.md  PLUGIN_GUIDE.md  PROTOCOL.md  demo-scenario.md  handoff.md  self-hosting.md
frontend/: Dockerfile  index.html  package.json  vite.config.js
frontend/src/: App.jsx  config.js  styles.css
frontend/src/api/: ws.js  (+1 more)
ppt/: 09-fl-client-help.txt  10-numbers.md  11-slide-map.md
tools/: simulate.py
(+83 files in other folders)
